<?xml version="1.0" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>

	<groupId>org.jpmml</groupId>
	<artifactId>jpmml-xgboost</artifactId>
	<version>1.6-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>JPMML-XGBoost</name>
	<description>Java library and command-line application for converting XGBoost models to PMML</description>
	<url>https://github.com/jpmml/jpmml-xgboost</url>

	<licenses>
		<license>
			<name>GNU Affero General Public License (AGPL) version 3.0</name>
			<url>http://www.gnu.org/licenses/agpl-3.0.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>villu.ruusmann</id>
			<name>Villu Ruusmann</name>
		</developer>
	</developers>

	<modules>
		<module>pmml-xgboost</module>
		<module>pmml-xgboost-example</module>
	</modules>

	<scm>
		<connection>scm:git:git@github.com:jpmml/jpmml-xgboost.git</connection>
		<developerConnection>scm:git:git@github.com:jpmml/jpmml-xgboost.git</developerConnection>
		<url>git://github.com/jpmml/jpmml-xgboost.git</url>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/jpmml/jpmml-xgboost/issues</url>
	</issueManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-xgboost</artifactId>
				<version>1.6-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-xgboost-example</artifactId>
				<version>1.6-SNAPSHOT</version>
			</dependency>

			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-converter</artifactId>
				<version>1.5.3</version>
			</dependency>
			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-converter-testing</artifactId>
				<version>1.5.3</version>
			</dependency>

			<dependency>
				<groupId>org.jpmml</groupId>
				<artifactId>pmml-evaluator-testing</artifactId>
				<version>1.6.3</version>
			</dependency>

			<dependency>
				<groupId>com.beust</groupId>
				<artifactId>jcommander</artifactId>
				<version>1.72</version>
			</dependency>

			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>[2.6, 2.9.0]</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.13.2</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<javadocVersion>1.8</javadocVersion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<localCheckout>true</localCheckout>
					<pushChanges>false</pushChanges>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>${jacoco.agent}</argLine>
					<trimStackTrace>false</trimStackTrace>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.7</version>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<propertyName>jacoco.agent</propertyName>
						</configuration>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>de.jutzig</groupId>
				<artifactId>github-release-plugin</artifactId>
				<version>1.2.0</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<configuration>
							<artifact>${project.build.directory}/${project.artifactId}-executable-${project.version}.${project.packaging}</artifact>
							<description>https://github.com/jpmml/jpmml-xgboost</description>
							<releaseName>${project.version}</releaseName>
							<repositoryId>jpmml/jpmml-xgboost</repositoryId>
							<tag>${project.version}</tag>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
